8203354: assert in ClassLoader::update_module_path_entry_list() could have incorrect message

Converting the assert in ClassLoader::update_module_path_entry_list() to a meaningful error message before aborting the CDS dump.

Reviewed-by: stuefe, iklam